docs-archive/apache-airflow-providers-google/15.0.0/_sources/_api/airflow/providers/google/cloud/links/managed_kafka/index.rst.txt
airflow.providers.google.cloud.links.managed_kafka
==================================================

.. py:module:: airflow.providers.google.cloud.links.managed_kafka


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.managed_kafka.MANAGED_KAFKA_BASE_LINK
   airflow.providers.google.cloud.links.managed_kafka.MANAGED_KAFKA_CLUSTER_LINK
   airflow.providers.google.cloud.links.managed_kafka.MANAGED_KAFKA_CLUSTER_LIST_LINK
   airflow.providers.google.cloud.links.managed_kafka.MANAGED_KAFKA_TOPIC_LINK
   airflow.providers.google.cloud.links.managed_kafka.MANAGED_KAFKA_CONSUMER_GROUP_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.managed_kafka.ApacheKafkaClusterLink
   airflow.providers.google.cloud.links.managed_kafka.ApacheKafkaClusterListLink
   airflow.providers.google.cloud.links.managed_kafka.ApacheKafkaTopicLink
   airflow.providers.google.cloud.links.managed_kafka.ApacheKafkaConsumerGroupLink


Module Contents
---------------

.. py:data:: MANAGED_KAFKA_BASE_LINK
   :value: '/managedkafka'


.. py:data:: MANAGED_KAFKA_CLUSTER_LINK
   :value: '/managedkafka/{location}/clusters/{cluster_id}?project={project_id}'


.. py:data:: MANAGED_KAFKA_CLUSTER_LIST_LINK
   :value: '/managedkafka/clusters?project={project_id}'


.. py:data:: MANAGED_KAFKA_TOPIC_LINK
   :value: '/managedkafka/{location}/clusters/{cluster_id}/topics/{topic_id}?project={project_id}'


.. py:data:: MANAGED_KAFKA_CONSUMER_GROUP_LINK
   :value: '/managedkafka/{location}/clusters/{cluster_id}/consumer_groups/{consumer_group_id}?project={project_id}'


.. py:class:: ApacheKafkaClusterLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Apache Kafka Cluster link.


   .. py:attribute:: name
      :value: 'Apache Kafka Cluster'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cluster_conf'



   .. py:attribute:: format_str
      :value: '/managedkafka/{location}/clusters/{cluster_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, cluster_id)
      :staticmethod:



.. py:class:: ApacheKafkaClusterListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Apache Kafka Clusters link.


   .. py:attribute:: name
      :value: 'Apache Kafka Cluster List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cluster_list_conf'



   .. py:attribute:: format_str
      :value: '/managedkafka/clusters?project={project_id}'



   .. py:method:: persist(context, task_instance)
      :staticmethod:



.. py:class:: ApacheKafkaTopicLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Apache Kafka Topic link.


   .. py:attribute:: name
      :value: 'Apache Kafka Topic'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'topic_conf'



   .. py:attribute:: format_str
      :value: '/managedkafka/{location}/clusters/{cluster_id}/topics/{topic_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, cluster_id, topic_id)
      :staticmethod:



.. py:class:: ApacheKafkaConsumerGroupLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Apache Kafka Consumer Group link.


   .. py:attribute:: name
      :value: 'Apache Kafka Consumer Group'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'consumer_group_conf'



   .. py:attribute:: format_str
      :value: '/managedkafka/{location}/clusters/{cluster_id}/consumer_groups/{consumer_group_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, cluster_id, consumer_group_id)
      :staticmethod:



